<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.chaby.tarea2.ConfirmarDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textStyle="normal|bold"
            android:textSize="@dimen/tamaño_texto" />

        <TextView
            android:id="@+id/txtFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textStyle="normal|bold"
            android:textSize="@dimen/tamaño_texto"/>


        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:layout_marginTop="@dimen/top"
            android:textStyle="normal|bold"
            android:textSize="@dimen/tamaño_texto"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/top"
            android:textStyle="normal|bold"
            android:textSize="@dimen/tamaño_texto"/>


        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:layout_marginTop="@dimen/top"
            android:textStyle="normal|bold"
            android:textSize="@dimen/tamaño_texto"/>

    </LinearLayout>

    <Button
        android:text="@string/boton_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditar"
        android:theme="@style/Botones"
        />


</LinearLayout>
